fix(airtable): Fix button not showing up (#2129)
Closes #2123

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1205,6 +1205,7 @@ a.toggl-button.workfront.min {
 
 /********* AIRTABLE ********/
 .toggl-button.airtable {
+  align-self: center;
   margin-top: 5px;
   margin-left: 30px;
   position: relative;
